add the client and server Repo @ taskMagement|14-02-2023

--- a/Server/package.json
+++ b/Server/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "author": "ankit",
+  "author": "satish Manepalli",
   "license": "ISC",
   "description": "",
   "dependencies": {
