--- a/Client/package.json
+++ b/Client/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "proxy": "https://task-management-mern-app.onrender.com",
+  "proxy": "http://localhost:3000",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,8 +12,12 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-bootstrap": "^2.10.9",
+    "react-bootstrap-typeahead": "^7.0.0-rc.4",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5"
